# django-kickstart

./: .gitignore  LICENSE.md  README.md  pyproject.toml
apis/: admin.py  authentication.py  base_api.py  methods.py  models.py  pagination.py  urls.py
apis/apis/v1/: router.py
apis/apis/v1/apis/: accounts.py  api_keys.py
apis/apis/v1/serializers/: accounts.py  api_keys.py
apis/apis/v1/tests/: base.py  test_api_keys.py  test_authentication.py
apis/migrations/: 0001_initial.py  0002_initial.py
core/: admin.py  celery.py  settings.py  tasks.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/static/core/: style.css
core/templates/core/: base.html  landing.html
