[project]
name = "django-starter"
version = "0.1.0"
description = "Start Project for Django"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "django>=5.2.9",
    "django-celery-beat>=2.8.1",
    "django-extensions>=4.1",
    "djangorestframework>=3.16.1",
    "ipython>=9.7.0",
    "psycopg[binary,pool]>=3.3.1",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "whitenoise>=6.11.0",
]
